Ensuring server has sufficient memory allocated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,11 @@ services:
       VERSION: "1.21.1"
       FABRIC_LOADER_VERSION: "0.16.10"
       FABRIC_LAUNCHER_VERSION: "1.0.3"
+      MEMORY: "6G"
       SERVER_WORLDNAME: ${SERVER_WORLDNAME}
       LEVEL: ${SERVER_WORLDNAME}
       ENABLE_WHITELIST: "false"
-      DEBUG: ${DEBUG}
+      DEBUG: ${DEBUG:-False}
       SERVER_NAME: ${SERVER_NAME}
       ICON: ${SERVER_ICON}
       ALLOW_FLIGHT: ${ALLOW_FLIGHT:-False}
