Defaults + basic readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
       FABRIC_LOADER_VERSION: "0.16.10"
       FABRIC_LAUNCHER_VERSION: "1.0.3"
       MEMORY: "6G"
-      SERVER_WORLDNAME: ${SERVER_WORLDNAME}
-      LEVEL: ${SERVER_WORLDNAME}
+      SERVER_WORLDNAME: ${SERVER_WORLDNAME:-Cobbleverse}
+      LEVEL: ${SERVER_WORLDNAME:-MY_COBBLEVERSE_WORLD}
       ENABLE_WHITELIST: "false"
       DEBUG: ${DEBUG:-False}
-      SERVER_NAME: ${SERVER_NAME}
+      SERVER_NAME: ${SERVER_NAME_-Cobbleverse}
       ICON: ${SERVER_ICON}
       ALLOW_FLIGHT: ${ALLOW_FLIGHT:-False}
       SPAWN_MONSTERS: ${SPAWN_MONSTERS:-True}
