--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - ./data:/data
       - ./scripts:/scripts
     environment:
-      MODRINTH_URL: ${MODRINTH_URL}
-      SERVER_WORLDNAME: ${SERVER_WORLDNAME}
+      MODRINTH_URL: ${MODRINTH_URL:-https://cdn.modrinth.com/data/Jkb29YJU/versions/X4JhlFiB/COBBLEVERSE%201.3.3.mrpack}
+      SERVER_WORLDNAME: ${SERVER_WORLDNAME:-MY_COBBLEVERSE_WORLD}
     entrypoint: ["/bin/sh", "/scripts/install-modpack.sh"]
 
 
@@ -23,14 +23,14 @@ services:
       FABRIC_LOADER_VERSION: "0.16.10"
       FABRIC_LAUNCHER_VERSION: "1.0.3"
       MEMORY: "6G"
-      SERVER_WORLDNAME: ${SERVER_WORLDNAME:-Cobbleverse}
+      SERVER_WORLDNAME: ${SERVER_WORLDNAME:-MY_COBBLEVERSE_WORLD}
       LEVEL: ${SERVER_WORLDNAME:-MY_COBBLEVERSE_WORLD}
       ENABLE_WHITELIST: "false"
       DEBUG: ${DEBUG:-False}
       SERVER_NAME: ${SERVER_NAME_-Cobbleverse}
-      ICON: ${SERVER_ICON}
+      ICON: ${SERVER_ICON:-}
       ALLOW_FLIGHT: ${ALLOW_FLIGHT:-False}
-      SPAWN_MONSTERS: ${SPAWN_MONSTERS:-True}
+      SPAWN_MONSTERS: ${SPAWN_MONSTERS:-False}
 
 
     volumes:
